--- a/Themes/Glossy-Cyan/theme.css
+++ b/Themes/Glossy-Cyan/theme.css
@@ -2186,7 +2186,7 @@ left: -11px;
 .channel.channel-text.unread:not(.channel-muted):not(.selected),
 [class*=unreadIndicator] {
 -webkit-animation: glowpulse 1s infinite alternate;
-animation: glowpulse 1s infinite alternate;
+/*animation: glowpulse 1s infinite alternate;*/
 } 
 .channel:not(.selected) {
 transition: background 1s ease-out;
